#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSXtcOutput
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-05
2012-07-24 Andy Salnikov
- rhel6/gcc44 migration, added missing headers

Tag: V00-01-04
2012-07-12 Andy Salnikov
- fixing changelog entry

Tag: V00-01-03
2012-07-12 Andy Salnikov
- Restored chunk/stream in the file names, if someone wants to change 
  it then use configuration file

Tag: V00-01-02
2012-05-15 Ingrid Ofte
- Removed the chunk and stream from output file data name. 
  There's only one output file, this makes that explicit. 
	
Tag: V00-00-01
2012-03-08 Andy Salnikov
- Fist version, more or less tested