@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-06
+2014-07-18 David Schneider
+- update for control stream merging, trac ticket #279
+  needs to look for XtcInput::DgramList as well as Pds::Dgram
+
 Tag: V00-01-05
 2012-07-24 Andy Salnikov
 - rhel6/gcc44 migration, added missing headers
